--- a/day68/css/master.css
+++ b/day68/css/master.css
@@ -186,3 +186,62 @@ hr {
   color: var(--blue);
   font-weight: 500;
 }
+
+
+@media all and (max-width: 1274px) {
+    .card {
+        margin-right: 30px;
+        margin-bottom: 40px;
+    }
+}
+
+@media all and (max-width: 1237px) {
+    .card {
+        margin-right: 20px;
+    }
+}
+
+@media all and (max-width: 1197px) {
+    .card {
+        width: 250px;
+        height: 406px;
+        margin-right: 30px;
+    }
+
+    .card img {
+        transform: scale(.7);
+        margin: 15px auto 0;
+    }
+
+    .description {
+        font-size: 1.15rem;
+        line-height: 1.5rem;
+        margin: 0 20px;
+    }
+}
+
+@media all and (max-width: 1047px) {
+    .card {
+        float: none;
+        display: block;
+        width: 300px;
+        height: 456px;
+        margin-right: 30px;
+    }
+
+    .card img {
+        transform: scale(1);
+        margin: 30px auto 10px;
+    }
+
+    .description {
+        font-size: 1.25rem;
+        line-height: 2rem;
+    }
+
+    #theme-btn {
+        right: 0;
+        top: 73%;
+        transform: scale(.6);
+    }
+}
