--- a/day71/css/master.css
+++ b/day71/css/master.css
@@ -15,7 +15,7 @@
     --black: #1D1C2B;
     --engine-gray: #F2F2F2;
     --engine-light-gray: #EDEBEB;
-
+    --yellow: #FDD840;
     /* shapes */
     --circle: 50%;
 }
@@ -28,7 +28,8 @@ html {
 }
 
 body {
-  background: var(--dark-purple);
+    font-family: 'Lobster', cursive;
+    background: var(--dark-purple);
 }
 
 .stars {
@@ -41,14 +42,28 @@ body {
   animation: starsAnimation 4s infinite;
 }
 
+
 .box {
     position: relative;
     width: 447px;
     height: 978px;
     margin: auto;
-    margin-top: 10%;
+    margin-top: -100%;
     background: none;
-    z-index: 2;
+    z-index: 3;
+    animation: rocket-blast 10s 1;
+}
+
+.blast {
+    position: absolute;
+    left: 47%;
+    width: 6%;
+    height: 100%;
+    margin-top: -2.5%;
+    background: var(--yellow);
+    z-index: 3;
+    animation: blast-hide 10s 1;
+    animation-fill-mode: forwards;
 }
 
 .tank {
@@ -222,6 +237,193 @@ body {
     background: var(--engine-gray);
 }
 
+.light-purple-cloud-1 {
+    position: absolute;
+    bottom: -10%;
+    left: -10%;
+    width: 20%;
+    height: 40%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.light-purple-cloud-2 {
+    position: absolute;
+    bottom: -20%;
+    left: 5%;
+    width: 25%;
+    height: 55%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.light-purple-cloud-3 {
+    position: absolute;
+    bottom: -23%;
+    left: 20%;
+    width: 25%;
+    height: 55%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.light-purple-cloud-4 {
+    position: absolute;
+    bottom: -9%;
+    left: 40%;
+    width: 30%;
+    height: 55%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.light-purple-cloud-5 {
+    position: absolute;
+    bottom: -20%;
+    left: 60%;
+    width: 30%;
+    height: 55%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.light-purple-cloud-6 {
+    position: absolute;
+    bottom: -20%;
+    left: 80%;
+    width: 30%;
+    height: 55%;
+    border-radius: var(--circle);
+    background: var(--violet);
+    z-index: 2;
+}
+
+.white-cloud-1 {
+    position: absolute;
+    bottom: -10%;
+    left: -10%;
+    width: 20%;
+    height: 20%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-2 {
+    position: absolute;
+    bottom: -10%;
+    left: 6%;
+    width: 20%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-3 {
+    position: absolute;
+    bottom: -15%;
+    left: 16%;
+    width: 25%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-4 {
+    position: absolute;
+    bottom: -5%;
+    left: 26%;
+    width: 35%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-5 {
+    position: absolute;
+    bottom: -15%;
+    left: 50%;
+    width: 25%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-6 {
+    position: absolute;
+    bottom: -25%;
+    left: 70%;
+    width: 15%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+.white-cloud-7 {
+    position: absolute;
+    bottom: -15%;
+    right: -5%;
+    width: 25%;
+    height: 30%;
+    border-radius: var(--circle);
+    background: var(--anti-flash-white);
+    z-index: 3;
+}
+
+footer {
+  position: absolute;
+  bottom: 1%;
+  width: 100%;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 400;
+  font-size: .9rem;
+  font-family: helvetica, sans-serif;
+  color: var(--violet);
+  z-index: 5;
+}
+
+.footer-links a {
+  text-decoration: none;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  color: var(--violet);
+}
+
+.footer-links a:hover {
+  color: var(--light-purple);
+  font-weight: 500;
+}
+
+.title {
+    position: absolute;
+    width: 100%;
+    margin: auto;
+    top: 20%;
+    left: auto;
+    right: auto;
+    text-align: center;
+    font-size: 5.5rem;
+    text-transform: capitalize;
+    z-index: 4;
+    color: var(--yellow);
+    opacity: 0;
+    animation: reveal-text 2s 1;
+    animation-delay: 5.1s;
+    animation-fill-mode: forwards;
+}
+
+/* Animation */
 @keyframes starsAnimation {
     0%{
         transform: scale(1);
@@ -234,7 +436,35 @@ body {
     }
 }
 
+@keyframes rocket-blast {
+    0%{
+        margin-top: 100%;
+    }
+    100% {
+        margin-top: -100%;
+    }
+}
 
+@keyframes blast-hide {
+    0% {
+        height: 100%;
+    }
+    100% {
+        height: 0;
+    }
+}
+
+@keyframes reveal-text {
+    0%{
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
+/* Media Queries */
 @media all and (max-width: 450px) {
     .box {
         width: 307px;
