--- a/day112/css/master.css
+++ b/day112/css/master.css
@@ -53,6 +53,8 @@ body {
   height: 100%;
   border-radius: 50px;
   background: #FFFFFF;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .black-keys {
@@ -62,6 +64,7 @@ body {
   width: 100%;
   height: 50%;
   z-index: 1;
+
 }
 
 .keys-black {
@@ -70,6 +73,8 @@ body {
   height: 100%;
   border-radius: 50px;
   background: #252122;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .keys-black:nth-of-type(1) {
@@ -90,4 +95,20 @@ body {
 
 .keys-black:nth-of-type(5) {
   margin-left: 12%;
+}
+
+
+.white-keys-clicked {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+
+  background: #D0D0D0;
+}
+
+
+.black-keys-clicked {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+
+  background: #050404;
 }
