--- a/day123/css/style.css
+++ b/day123/css/style.css
@@ -2,14 +2,12 @@
     box-sizing: border-box;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
 body {
     background: #4798D2;
+    font-size: 10px;
+    overflow: hidden;
+    transition: all .3s;
+    animation: body 10s infinite;
 }
 
 .circle {
@@ -31,10 +29,512 @@ body {
     z-index: 2;
 }
 
-.star {
+.party-hat {
     position: absolute;
-    width: 10px;
-    height: 10px;
-    background: #ffffff;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: all .3s;
+    animation: hat 10s infinite;
+}
+
+.base-hat {
+    position: absolute;
+    left: 10%;
+    bottom: 0;
+    width: 80%;
+    height: 5%;
+    background: #CE6461;
+}
+
+.hat {
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    width: 80%;
+    height: 90%;
+    background: #FDD9CB;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
     transform-origin: center;
+    overflow: hidden;
+}
+
+.poka-1 {
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(1.5);
+}
+
+.poka-2 {
+    position: absolute;
+    left: 20%;
+    top: 40%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(2);
+}
+
+.poka-3 {
+    position: absolute;
+    left: 45%;
+    top: 70%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(2.5);
+}
+
+.poka-4 {
+    position: absolute;
+    right: 10%;
+    top: 70%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(2);
+}
+
+.poka-5 {
+    position: absolute;
+    right: 30%;
+    bottom: 50%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(1.5);
+}
+
+.poka-6 {
+    position: absolute;
+    left: 10%;
+    bottom: 15%;
+    width: 11%;
+    height: 10%;
+    background: white;
+    border-radius: 50%;
+    transform: scale(1.5);
+}
+
+.starify-1 {
+    position: absolute;
+    left: 40%;
+    top: -1%;
+    width: 20%;
+    height: 20%;
+    background: #211F21;
+    -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+.starify-2 {
+    position: absolute;
+    left: 40%;
+    top: -1%;
+    width: 20%;
+    height: 20%;
+    background: #211F21;
+    -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    transform: rotate(110deg);
+}
+
+.base-hat:after {
+    position: absolute;
+    content: "fhejskfhjkejsdfn";
+    text-decoration: #CE6461 overline wavy;
+    font-size: 4rem;
+    color: transparent;
+}
+
+.present {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: all .3s;
+    animation: present 10s infinite;
+}
+
+.box-present {
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    width: 80%;
+    height: 90%;
+    background: #CE6461;
+    transform-origin: center;
+    overflow: hidden;
+    -webkit-clip-path: polygon(0 5%, 100% 0, 90% 100%, 10% 100%);
+    clip-path: polygon(0 5%, 100% 0, 90% 100%, 10% 100%);
+}
+
+.ribon-body-y {
+    position: absolute;
+    left: 49.25%;
+    width: 1.5%;
+    height: 100%;
+    background: #211F21;
+}
+
+.ribon-body-x {
+    position: absolute;
+    top: 39.25%;
+    height: 1.5%;
+    width: 100%;
+    background: #211F21;
+}
+
+.tri-1 {
+    position: absolute;
+    left: 10%;
+    top: 15%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(10deg);
+}
+
+.tri-2 {
+    position: absolute;
+    right: 10%;
+    top: 10%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(-5deg);
+}
+
+.tri-3 {
+    position: absolute;
+    right: 35%;
+    top: 30%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(-5deg);
+}
+
+.tri-4 {
+    position: absolute;
+    left: 25%;
+    top: 45%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(15deg);
+}
+
+.tri-5 {
+    position: absolute;
+    right: 25%;
+    top: 65%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(-15deg);
+}
+
+.tri-6 {
+    position: absolute;
+    left: 15%;
+    top: 75%;
+    width: 15%;
+    height: 15%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    transform: rotate(-15deg);
+}
+
+.ribon-l {
+    position: absolute;
+    top: -1%;
+    left: 26%;
+    height: 15%;
+    width: 25%;
+    border-radius: 50%;
+    border: 6px solid #211F21;
+    transform: rotate(20deg);
+}
+
+.ribon-r {
+    position: absolute;
+    top: -1%;
+    right: 26%;
+    height: 15%;
+    width: 25%;
+    border-radius: 50%;
+    border: 6px solid #211F21;
+    transform: rotate(-20deg);
+}
+
+.ribon-curve-l {
+    position: absolute;
+    top: 5%;
+    left: 27%;
+    height: 15%;
+    width: 25%;
+    border-radius: 50%;
+    border: 6px solid #211F21;
+    -webkit-clip-path: polygon(50% 50%, 100% 0, 100% 100%, 50% 100%);
+    clip-path: polygon(50% 50%, 100% 0, 100% 100%, 50% 100%);
+    transform: rotate(30deg);
+}
+
+.ribon-curve-r {
+    position: absolute;
+    top: 5%;
+    right: 27%;
+    height: 15%;
+    width: 25%;
+    border-radius: 50%;
+    border: 6px solid #211F21;
+    -webkit-clip-path: polygon(50% 50%, 100% 0, 100% 100%, 50% 100%);
+    clip-path: polygon(50% 50%, 100% 0, 100% 100%, 50% 100%);
+    transform: rotate(-30deg) scaleX(-1);
+}
+
+.ballon {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform: scale(0);
+    transition: all .3s;
+    animation: ballon 10s infinite;
+}
+
+.ballon-ball {
+    position: absolute;
+    left: 30%;
+    width: 40%;
+    height: 50%;
+    background: white;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.bottom-ballon {
+    position: absolute;
+    left: 45%;
+    top: 45%;
+    width: 10%;
+    height: 10%;
+    background: white;
+    -webkit-clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+}
+
+.string {
+    position: absolute;
+    top: 40%;
+    left: 49.25%;
+    width: 1.5%;
+    height: 60%;
+    background: #211F21;
+}
+
+.curve {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    width: 10%;
+    height: 12%;
+    border-radius: 50%;
+    border: 6px solid #211F21;
+}
+
+.stripe-1 {
+    position: absolute;
+    left: 0%;
+    top: -5%;
+    width: 10%;
+    height: 150%;
+    background: #FDD9CB;
+    transform: rotate(20deg);
+}
+
+.stripe-2 {
+    position: absolute;
+    left: 20%;
+    top: -5%;
+    width: 10%;
+    height: 150%;
+    background: #FDD9CB;
+    transform: rotate(20deg);
+}
+
+.stripe-3 {
+    position: absolute;
+    left: 40%;
+    top: -5%;
+    width: 10%;
+    height: 150%;
+    background: #FDD9CB;
+    transform: rotate(20deg);
+}
+
+.stripe-4 {
+    position: absolute;
+    left: 61%;
+    top: -5%;
+    width: 10%;
+    height: 150%;
+    background: #FDD9CB;
+    transform: rotate(20deg);
+}
+
+.stripe-5 {
+    position: absolute;
+    left: 81%;
+    top: -5%;
+    width: 10%;
+    height: 150%;
+    background: #FDD9CB;
+    transform: rotate(20deg);
+}
+
+@keyframes hat {
+    0% {
+        transform: scale(0);
+    }
+
+    10% {
+        transform: scale(1);
+    }
+
+    23% {
+        transform: scale(1);
+    }
+
+    30% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes present {
+    0% {
+        transform: scale(0);
+    }
+
+    10% {
+        transform: scale(0);
+    }
+
+    23% {
+        transform: scale(0);
+    }
+
+    30% {
+        transform: scale(0);
+    }
+
+    40% {
+        transform: scale(1);
+    }
+
+    67% {
+        transform: scale(1);
+    }
+
+    70% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes ballon {
+    0% {
+        transform: scale(0);
+    }
+
+    10% {
+        transform: scale(0);
+    }
+
+    23% {
+        transform: scale(0);
+    }
+
+    30% {
+        transform: scale(0);
+    }
+
+    40% {
+        transform: scale(0);
+    }
+
+    67% {
+        transform: scale(0);
+    }
+
+    70% {
+        transform: scale(0);
+    }
+
+    80% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes body {
+    0% {
+        background: #4798D2;
+    }
+
+    10% {
+        background: #4798D2;
+    }
+
+    23% {
+        background: #4798D2;
+    }
+
+    30% {
+        background: #FDD9CB;
+    }
+
+    67% {
+        background: #FDD9CB;
+    }
+
+    71% {
+        background: #FBDE2D;
+    }
+
+    100% {
+        transform: #FBDE2D;
+    }
 }
