--- a/day124/css/style.css
+++ b/day124/css/style.css
@@ -8,6 +8,7 @@
 body {
     background: #F6D1AC;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
 }
 
 .container {
@@ -25,6 +26,18 @@ body {
     left: 10%;
     width: 20%;
     height: 100%;
+}
+
+.single-plate::after {
+    content: 's';
+    top: -5%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
 }
 
 .stick-center-s {
@@ -138,6 +151,21 @@ body {
     transform-origin: center bottom;
 }
 
+.drum-l-copy::after {
+    content: 'a';
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
+    z-index: 5;
+}
+
 .white-box {
     position: absolute;
     width: 100%;
@@ -204,6 +232,21 @@ body {
     background: #ABABAB;
     border: 6px solid #3F3A37;
     border-radius: 50%;
+    z-index: 5;
+}
+
+.drum-center-copy::after {
+    content: 'd';
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
     z-index: 5;
 }
 
@@ -334,6 +377,21 @@ body {
     transform-origin: center bottom;
 }
 
+.top-drum-l::after {
+    content: 'f';
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
+    z-index: 5;
+}
+
 .top-drum-r {
     position: absolute;
     right: 3%;
@@ -344,6 +402,21 @@ body {
     overflow: hidden;
     transition: all 0.07s;
     transform-origin: center bottom;
+}
+
+.top-drum-r::after {
+    content: 'g';
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
+    z-index: 5;
 }
 
 .holder-h {
@@ -393,6 +466,21 @@ body {
     z-index: 1;
     transition: all 0.07s;
     transform-origin: center bottom;
+}
+
+.drum-r-copy::after {
+    content: 'h';
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
+    z-index: 5;
 }
 
 .drum-r-holder {
@@ -449,6 +537,18 @@ body {
     right: 0%;
     width: 20%;
     height: 100%;
+}
+
+.double-plate::after {
+    content: 'j';
+    top: 0%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, .1);
 }
 
 .d-holder {
