footer and completed style

--- a/day47/css/master.css
+++ b/day47/css/master.css
@@ -10,10 +10,16 @@ html {
 body {
   margin: 0;
   font-size: 2rem;
+  display:-webkit-box;
+  display:-ms-flexbox;
   display:flex;
-  flex:1;
+  -webkit-box-flex:1;
+      -ms-flex:1;
+          flex:1;
   min-height: 100vh;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .clock {
@@ -35,7 +41,8 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  transform: translateY(-3px); /* account for the height of the clock hands */
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px); /* account for the height of the clock hands */
 }
 
 .hand {
@@ -44,10 +51,14 @@ body {
   background:#3F51B5;
   position: absolute;
   top:50%;
-  transform-origin: 100%;
-  transform: rotate(90deg);
+  -webkit-transform-origin: 100%;
+          transform-origin: 100%;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition: all 0.05s;
   transition: all 0.05s;
-  transition-timing-function: cubic-bezier(0, 0.44, 0.3, 1.03);
+  -webkit-transition-timing-function: cubic-bezier(0, 0.44, 0.3, 1.03);
+          transition-timing-function: cubic-bezier(0, 0.44, 0.3, 1.03);
 
 }
 
@@ -73,7 +84,8 @@ body {
   z-index: 4;
   top: 50%;
   left: -4%;
-  transform-origin: 90%;
+  -webkit-transform-origin: 90%;
+          transform-origin: 90%;
   width: 60%;
   height:2.5px;
   background: #FF4081;
@@ -106,69 +118,79 @@ body {
 .three {
   top: 50%;
   left: -2%;
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .nine {
   top: 50%;
   right: -2%;
-  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .one {
   left: 75%;
   top: 5%;
   height: 5%;
-  transform: rotate(25.5deg);
+  -webkit-transform: rotate(25.5deg);
+          transform: rotate(25.5deg);
 }
 
 .eleven {
   right: 75%;
   top: 5%;
   height: 5%;
-  transform: rotate(-25.5deg);
+  -webkit-transform: rotate(-25.5deg);
+          transform: rotate(-25.5deg);
 }
 
 .eight {
   top: 75%;
   left: 5%;
   height: 5%;
-  transform: rotate(55.5deg);
+  -webkit-transform: rotate(55.5deg);
+          transform: rotate(55.5deg);
 }
 
 .four {
   top: 75%;
   right: 3%;
   height: 5%;
-  transform: rotate(-55.5deg);
+  -webkit-transform: rotate(-55.5deg);
+          transform: rotate(-55.5deg);
 }
 
 .two {
   left: 95%;
   top: 25%;
   height: 5%;
-  transform: rotate(55.5deg);
+  -webkit-transform: rotate(55.5deg);
+          transform: rotate(55.5deg);
 }
 
 .ten {
   right: 95%;
   top: 25%;
   height: 5%;
-  transform: rotate(-55.5deg);
+  -webkit-transform: rotate(-55.5deg);
+          transform: rotate(-55.5deg);
 }
 
 .seven {
   top: 95%;
   left: 25%;
   height: 5%;
-  transform: rotate(25.5deg);
+  -webkit-transform: rotate(25.5deg);
+          transform: rotate(25.5deg);
 }
 
 .five {
   top: 95%;
   right: 25%;
   height: 5%;
-  transform: rotate(-25.5deg);
+  -webkit-transform: rotate(-25.5deg);
+          transform: rotate(-25.5deg);
 }
 
 .date{
@@ -206,6 +228,7 @@ footer a {
     color: #3F51B5;
 
     -webkit-transition: all 0.5s; /* Safari */
+    -webkit-transition: all 0.5;
     transition: all 0.5;
 }
 
@@ -215,5 +238,6 @@ footer a:hover {
     border-bottom: 1px solid rgba(227, 227, 227, 0.5);
 
     -webkit-transition: all 0.5s; /* Safari */
+    -webkit-transition: all 0.5;
     transition: all 0.5;
 }
