--- a/day124/css/style.css
+++ b/day124/css/style.css
@@ -5,10 +5,47 @@
     padding: 0;
 }
 
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     background: #F6D1AC;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
+}
+
+footer {
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    z-index: 101;
+    bottom: -5%;
+    text-align: center;
+    font-size: 0.85rem;
+    color: rgba(0, 0, 0, .4);
+}
+
+footer a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, .4);
+
+    -webkit-transition: all 0.5s;
+    /* Safari */
+    -webkit-transition: all 0.5;
+    transition: all 0.5;
+}
+
+
+a:hover {
+    color: #D56667;
+    border-bottom: 1px solid #D56667;
+    -webkit-transition: all 0.5s;
+    /* Safari */
+    -webkit-transition: all 0.5;
+    transition: all 0.5;
 }
 
 .container {
@@ -18,6 +55,20 @@ body {
     background: none;
     display: block;
     margin: 10% auto 0;
+}
+
+.page-content {
+    margin-bottom: -20px;
+}
+
+.page-content::after {
+    content: "";
+    display: block;
+}
+
+footer,
+.page-content::after {
+    height: 80px;
 }
 
 /* SINGLE PLATE STYLE */
