--- a/day125/css/style.css
+++ b/day125/css/style.css
@@ -2,7 +2,49 @@
     box-sizing: border-box;
 }
 
-body {
+html {
+    height: 100%;
+    text-align: center;
     font-size: 10px;
-    background:
+    font-family: Arial,
+        Helvetica,
+        sans-serif;
+}
+
+body {
+    margin: 0;
+    font-size: 2rem;
+    background: #172A3A;
+    min-height: 100vh;
+}
+
+footer {
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    z-index: 101;
+    bottom: 5%;
+    text-align: center;
+    font-size: 1.2rem;
+    color: #508991;
+}
+
+footer a {
+    text-decoration: none;
+    color: #508991;
+
+    -webkit-transition: all 0.5s;
+    /* Safari */
+    -webkit-transition: all 0.5;
+    transition: all 0.5;
+}
+
+
+a:hover {
+    color: #75DDDD;
+    border-bottom: 1px solid #75DDDD;
+    -webkit-transition: all 0.5s;
+    /* Safari */
+    -webkit-transition: all 0.5;
+    transition: all 0.5;
 }
