--- a/day125/css/style.css
+++ b/day125/css/style.css
@@ -1,3 +1,4 @@
+/* GENERAL STYLING */
 * {
     box-sizing: border-box;
 }
@@ -23,7 +24,7 @@ footer {
     height: 10px;
     position: absolute;
     z-index: 101;
-    bottom: 5%;
+    bottom: 4%;
     text-align: center;
     font-size: 1.2rem;
     color: #508991;
@@ -39,7 +40,6 @@ footer a {
     transition: all 0.5;
 }
 
-
 a:hover {
     color: #75DDDD;
     border-bottom: 1px solid #75DDDD;
@@ -47,4 +47,37 @@ a:hover {
     /* Safari */
     -webkit-transition: all 0.5;
     transition: all 0.5;
+}
+
+/* CLOCK STYLING */
+.container {
+    position: relative;
+    width: 20rem;
+    height: 20rem;
+    background: none;
+    display: block;
+    margin: 10% auto;
+    border: 1px solid;
+}
+
+.clock {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-radius: 50%;
+    border: 10px solid #09BC8A;
+    transform: translateY(-3px);
+}
+
+.handel {
+    position: absolute;
+    top: 50%;
+    width: 50%;
+    height: 6px;
+    background: #004346;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0, 2.54, 1, 1);
 }
