--- a/day125/css/style.css
+++ b/day125/css/style.css
@@ -10,17 +10,30 @@ html {
     font-family: Arial,
         Helvetica,
         sans-serif;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
     margin: 0;
     font-size: 2rem;
     background: #172A3A;
-    min-height: 100vh;
+    min-height: 90vh;
+    max-width: 100vw;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 footer {
     width: 100%;
+    left: 0;
+    right: 0;
     height: 10px;
     position: absolute;
     z-index: 101;
@@ -55,9 +68,7 @@ a:hover {
     width: 20rem;
     height: 20rem;
     background: none;
-    display: block;
-    margin: 10% auto;
-    border: 1px solid;
+    margin: 2%;
 }
 
 .clock {
@@ -72,8 +83,7 @@ a:hover {
 
 .handel {
     position: absolute;
-    left: 2%;
-    top: 50%;
+    top: 49%;
     width: 48%;
     height: 6px;
     background: #004346;
