--- a/day128/main.css
+++ b/day128/main.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Lily+Script+One';
+
 * {
     margin: 0;
     padding: 0;
@@ -11,12 +13,56 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-content: center;
     background: #0a0f19;
     color: #fff;
 }
 
+header {
+    margin: 15rem auto 6rem;
+    max-width: 960px;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 7rem;
+    text-transform: uppercase;
+    font-family: 'Lily Script One', 'helvetica', Arial, sans-serif;
+    color: aqua;
+    text-shadow: 0.2rem 0.2rem 0 #008C8C;
+    margin-bottom: 2rem;
+}
+
+header p {
+    max-width: 42rem;
+    font-size: 2rem;
+}
+
+p {
+    color: #353D4C;
+    font-weight: 200;
+    letter-spacing: .01rem;
+}
+
+footer {
+    text-align: center;
+}
+
+footer p {
+    font-size: 1.5rem;
+}
+
+span {
+    display: block;
+    margin-top: 0.5rem;
+}
+
 .keys {
-    margin: 20% auto 0;
+    margin: 0 auto 9rem;
     max-width: 960px;
     display: flex;
     flex: 1;
@@ -29,16 +75,29 @@ body {
     width: 10rem;
     height: 10rem;
     margin: 1rem;
-    font-size: 2.5rem;
+    font-size: 1.75rem;
     border-radius: 50%;
     background: #282c33;
     border: 4px solid #000;
     transition: all 0.08s;
     outline: none;
+    text-align: center
+}
+
+.key i {
+    font-size: 2.5rem;
 }
 
 .playing {
     transform: scale(1.1);
     border-color: aqua;
     box-shadow: 0 0 1rem aqua;
+}
+
+.playing i {
+    color: aqua;
+}
+
+.year {
+    display: inline;
 }
